--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,6 @@
 # The URL the site will be built for.
-base_url = "https://blogdestare.com"
+# base_url = "https://blogdestare.com"
+base_url = "https://blogdestare.github.io"
 
 # The theme to be used.
 theme = "zolarwind"
@@ -23,21 +24,21 @@ highlight_code = true
 
 [extra]
 
-# The copyright notice
+# The copyright notice.
 copyright = "(c) 2022-{year} Biannca Locatelli"
 
 # Provides a path to the site's favicon in SVG format.
 favicon_svg = "/img/yin-yang.svg"
 
-# The pages that appear in the footer
+# The pages that appear in the footer.
 footer_pages = ""
 # [
     # { title = "Privacy Policy",       url = "/pages/privacy/" },
     # { title = "Terms",                url = "/pages/terms/"   },
 # ]
 
+# The main navigation menu.
 # An array of main navigation menu items. Each item has a title and a url.
-# The main navigation menu
 menu_pages = [
     { title = "Home",                  url = "/" },
     { title = "Blog",                  url = "/blog/" },
@@ -55,8 +56,8 @@ path_language_resources = "themes/zolarwind/i18n/"
 # A brief description displayed on the site's banner.
 site_description = "a brief site description"
 
+# Social links.
 # An array of social media links. Each link has a name, a boolean indicating if it's enabled, a URL, and an SVG icon.
-# Social links
 social_links = [
     { name = "github",        enabled = true,  link = "https://github.com/thomasweitzel",               svg = '<svg class="h-6 w-6" fill="currentColor" viewBox="0 0 1024 1024"><path d="M8 0C3.58 0 0 3.58 0 8C0 11.54 2.29 14.53 5.47 15.59C5.87 15.66 6.02 15.42 6.02 15.21C6.02 15.02 6.01 14.39 6.01 13.72C4 14.09 3.48 13.23 3.32 12.78C3.23 12.55 2.84 11.84 2.5 11.65C2.22 11.5 1.82 11.13 2.49 11.12C3.12 11.11 3.57 11.7 3.72 11.94C4.44 13.15 5.59 12.81 6.05 12.6C6.12 12.08 6.33 11.73 6.56 11.53C4.78 11.33 2.92 10.64 2.92 7.58C2.92 6.71 3.23 5.99 3.74 5.43C3.66 5.23 3.38 4.41 3.82 3.31C3.82 3.31 4.49 3.1 6.02 4.13C6.66 3.95 7.34 3.86 8.02 3.86C8.7 3.86 9.38 3.95 10.02 4.13C11.55 3.09 12.22 3.31 12.22 3.31C12.66 4.41 12.38 5.23 12.3 5.43C12.81 5.99 13.12 6.7 13.12 7.58C13.12 10.65 11.25 11.33 9.47 11.53C9.76 11.78 10.01 12.26 10.01 13.01C10.01 14.08 10 14.94 10 15.21C10 15.42 10.15 15.67 10.55 15.59C13.71 14.53 16 11.53 16 8C16 3.58 12.42 0 8 0Z" transform="scale(64)"/></svg>' },
     { name = "stackoverflow", enabled = true,  link = "https://stackoverflow.com/u/188291",             svg = '<svg class="h-6 w-6" fill="currentColor" viewBox="0 0 73.099998 86.599998"><g transform="translate(-22.6,-14.9)"><path d="m 84.4,93.8 0,-23.2 7.7,0 0,30.9 -69.5,0 0,-30.9 7.7,0 0,23.2 z"/><path d="m 38.8,68.4 37.8,7.9 1.6,-7.6 -37.8,-7.9 -1.6,7.6 z m 5,-18 35,16.3 3.2,-7 -35,-16.4 -3.2,7.1 z M 53.5,33.2 83.2,57.9 88.1,52 58.4,27.3 53.5,33.2 Z m 19.2,-18.3 -6.2,4.6 23,31 6.2,-4.6 -23,-31 z M 38,86 l 38.6,0 0,-7.7 -38.6,0 0,7.7 z"/></g></svg>' },
